[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch research papers from PubMed with non-academic pharmaceutical/biotech affiliations"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "pubmed_fetcher" }]

[tool.poetry.scripts]
get-papers-list = "cli:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
