[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "pubmed_fetcher" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
